# App-of-the-damned

backend/: .gitignore  Cargo.toml  db
backend/entity/: Cargo.toml
backend/entity/src/: lib.rs  unit.rs  weapon.rs  weapon_unit.rs
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20230329_212951_weapon.rs  m20230330_221521_weapon_unit.rs  main.rs
backend/src/: main.rs
backend/src/graphql/: schema.rs
backend/src/graphql/mutation/: characteristics.rs  mod.rs  unit.rs
backend/src/graphql/query/: mod.rs  unit.rs
backend/src/utils/: mod.rs  mutation_value_check.rs  update_json_value.rs
frontend/: .npmrc  package.json  pnpm-lock.yaml  tailwind.config.cjs
frontend/src/lib/components/common/: Collapse.svelte  CollapseUnit.svelte  Lang.svelte  SimpleTitle.svelte
frontend/src/lib/components/icons/: Range.svelte  SpellDifficulty.svelte  Strength.svelte
frontend/src/lib/components/website/liste/: List.svelte  Unit.svelte
frontend/src/lib/components/website/liste/magic/: Magic.svelte  MagicTitle.svelte
frontend/src/lib/components/website/liste/skills/: Skills.svelte  SkillsTitle.svelte
frontend/src/lib/components/website/liste/weapon/: BallisticWeaponTitle.svelte  BallisticWeapons.svelte  Special.svelte  WeaponTitle.svelte  Weapons.svelte
frontend/src/lib/trad/: weaponTrad.ts
frontend/src/lib/utils/translation/: langStore.ts  pageTranslation.ts
frontend/src/lib/utils/unit/: characteristics.ts  list.ts  magic.ts  special.ts  unit.ts  weapons.ts
frontend/src/routes/liste/: +page.svelte
