[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde = { version = "1", features = ["derive"] }
dotenv = "0.15.0"
entity = { path = "./entity" }
axum = { version = "0.6.11", features = ["macros"]}
async-graphql = "5.0.6"
async-graphql-axum = "5.0.6"
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }

[dependencies.sea-orm]
version = "^0.11.0"
features = [
  "macros",
  "debug-print",
  "runtime-tokio-native-tls",
  "sqlx-sqlite",
]
default-features = false
