[package]
name = "entity"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
async-graphql = "5.0.6"
async-graphql-axum = "5.0.6"
serde_json = "1.0.94"

[dependencies.sea-orm]
version = "0.11.0" # sea-orm version
features = ["sqlx-postgres", "postgres-array"]
